[package]
name = "jiraify"
version = "0.1.0"
authors = ["Stephen Kong <stephen.kong@fariaedu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
structopt = "0.3.5"
reqwest = "0.9.22"
serde = "1.0.103"
base64 = "0.11.0"
serde_json = "1.0.42"
confy = "0.3.1"